Privacy and terms WIP

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,21 @@
 }
 
 /**************************/
+/* PRIVACY PAGE */
+/**************************/
+
+.privacy-policy {
+  padding: 20rem 0;
+  height: 4.8rem;
+  color: #333;
+}
+
+.privacy-description {
+  font-size: 1.8rem;
+  line-height: 1.6;
+}
+
+/**************************/
 /* NAVIGATION */
 /**************************/
 
