--- a/css/general.css
+++ b/css/general.css
@@ -99,7 +99,7 @@ body {
 .grid {
   display: grid;
   column-gap: 6.4rem;
-  row-gap: 9.6rem;
+  row-gap: 3.6rem;
 
   /* margin-bottom: 9.6rem; */
 }
@@ -157,7 +157,8 @@ body {
 .heading-tertiary {
   font-size: 3rem;
   line-height: 1.2;
-  margin-bottom: 3.2rem;
+  margin-top: 2.8rem;
+  margin-bottom: 1.2rem;
 }
 
 .subheading {
