--- a/css/general.css
+++ b/css/general.css
@@ -25,7 +25,7 @@ Large: 1.8
 
 - Primary: #e67e22
 - Tints:
-#fdf2e9
+#c1e2fb
 #fae5d3
 #eb984e
 
@@ -38,7 +38,7 @@ Large: 1.8
 
 #888
 #767676 (lightest grey allowed on #fff)
-#6f6f6f (lightest grey allowed on #fdf2e9)
+#6f6f6f (lightest grey allowed on #c1e2fb)
 #555
 #333
 
@@ -165,7 +165,7 @@ body {
   display: block;
   font-size: 1.6rem;
   font-weight: 500;
-  color: #cf711f;
+  color: #1F6AA5;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
@@ -179,7 +179,6 @@ body {
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
-  padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
   /* Only necessary for .btn */
@@ -194,24 +193,26 @@ body {
 
 .btn--full:link,
 .btn--full:visited {
-  background-color: #e67e22;
+  background-color: #1F6AA5;
   color: #fff;
+  padding: 1.6rem 6.2rem;
 }
 
 .btn--full:hover,
 .btn--full:active {
-  background-color: #cf711f;
+  background-color: #1F6AA5;
 }
 
 .btn--outline:link,
 .btn--outline:visited {
   background-color: #fff;
   color: #555;
+  padding: 1.6rem 2.8rem;
 }
 
 .btn--outline:hover,
 .btn--outline:active {
-  background-color: #fdf2e9;
+  background-color: #c1e2fb;
 
   /* border: 3px solid #fff; */
 
@@ -221,7 +222,7 @@ body {
 
 .btn--form {
   background-color: #45260a;
-  color: #fdf2e9;
+  color: #c1e2fb;
   align-self: end;
   padding: 1.2rem;
 }
@@ -234,7 +235,7 @@ body {
 .link:link,
 .link:visited {
   display: inline-block;
-  color: #e67e22;
+  color: #1F6AA5;
   text-decoration: none;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
@@ -243,7 +244,7 @@ body {
 
 .link:hover,
 .link:active {
-  color: #cf711f;
+  color: #1F6AA5;
   border-bottom: 1px solid transparent;
 }
 
@@ -265,7 +266,7 @@ body {
 .list-icon {
   width: 3rem;
   height: 3rem;
-  color: #e67e22;
+  color: #1F6AA5;
 }
 
 *:focus {
