--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@
 }
 
 .grid--footer {
-  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+  grid-template-columns: 2.0fr 1fr 1fr 1fr 1fr;
 }
 
 .logo-col {
@@ -613,10 +613,10 @@
 }
 
 .copyright {
-  font-size: 1.4rem;
+  font-size: 1.0rem;
   line-height: 1.6;
   color: #767676;
-  margin-top: auto;
+  margin-top: 1.2rem;
 }
 
 .footer-heading {
